# OpenER-ESP

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/opener/: CMakeLists.txt
components/opener/src/: opener_api.h
components/opener/src/cip/: appcontype.c  cipcommon.c  cipconnectionmanager.c  cipioconnection.c
components/opener/src/enet_encap/: cpf.c
components/opener/src/ports/: generic_networkhandler.c  generic_networkhandler.h
components/opener/src/ports/ESP32/: CMakeLists.txt  devicedata.h  networkconfig.c  networkconfig.h  networkhandler.c  opener.c  opener.h  opener_error.c
components/opener/src/ports/ESP32/sample_application/: opener_user_conf.h  sampleapplication.c
components/opener/src/ports/nvdata/: nvdata.c  nvqos.c  nvqos.h  nvtcpip.c  nvtcpip.h
main/: CMakeLists.txt  main.c  static_main.c
